# ACS_Simulator

./: .gitmodules  ACS_Simulator.md  Makefile  README.md  main  main 2  platformio.ini  test 2.txt
data/: 100delay.csv  10delay.csv  300delay.csv  3delay.csv  3msimu1plantsim.csv  400delay.csv  500delay.csv  graph.py  graph_detumble.py  graph_point.py  pointing500delay.csv
include/: unity_config.h
input/: 200ms_mag_change.txt  longtest.txt  static.txt
lib/ekf/: CMakeLists.txt  CalibratedEKF.hpp  README.md  ekf.cpp  ekf.h  ekf.hpp
logs/: devttyusbmodem2102_2023_11_17.20.56.05.848.txt  devttyusbmodem2102_2023_11_26.21.06.28.423.txt  devttyusbmodem2102_2023_11_26.21.20.38.256.txt  devttyusbmodem2102_2023_12_09.17.02.45.730.txt  devttyusbmodem2102_2023_12_09.17.05.36.520.txt  devttyusbmodem2102_2023_12_09.17.18.12.793.txt  devttyusbmodem2102_2023_12_09.17.18.16.390.txt  devttyusbmodem2102_2023_12_09.17.20.26.967.txt  devttyusbmodem2102_2023_12_09.17.33.03.069.txt  devttyusbmodem2102_2023_12_09.17.35.53.681.txt  devttyusbmodem2102_2023_12_09.17.43.52.675.txt  devttyusbmodem2102_2023_12_09.17.44.01.359.txt  devttyusbmodem2102_2023_12_09.17.44.18.332.txt  devttyusbmodem2102_2023_12_09.17.44.20.220.txt  devttyusbmodem2102_2023_12_09.17.50.49.107.txt  devttyusbmodem2102_2023_12_09.17.50.50.729.txt  devttyusbmodem2102_2023_12_09.17.51.58.302.txt  devttyusbmodem2102_2023_12_09.17.52.01.268.txt  devttyusbmodem2102_2023_12_09.17.52.03.995.txt  devttyusbmodem2102_2023_12_09.17.54.15.132.txt  devttyusbmodem2102_2023_12_09.17.54.16.909.txt  (+51 more)
output/: 100-25-15-duty-T-4.5mins-2weeks  (+14 more)
(+137 files in other folders)
